#39946 fix title alignment in emodnet md view

--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -174,6 +174,7 @@
       padding-top: 8px;
       padding-left: 4px;
       padding-bottom: 4px;
+      clear: both;
     }
     .gn-icon- {
       display: none !important;
